swagger scenarios
