# docs/swagger.yaml
@@ -22,30 +22,13 @@ definitions:
       username:
         type: string
     type: object
-host: localhost:80
+host: localhost:8080
 info:
   contact: {}
   description: API Server
   title: Admin Panel API
   version: "1.0"
 paths:
-  /api/v1/auth/sign-up:
-    get:
-      description: create account
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: success
-          schema:
-            type: string
-        "400":
-          description: error
-          schema:
-            type: string
-      summary: SignUp
-      tags:
-      - auth
   /auth/login-form:
     post:
       consumes:
@@ -63,10 +46,18 @@ paths:
       responses:
         "200":
           description: success
+          headers:
+            Authorization:
+              description: Authorization
+              type: string
           schema:
             type: string
         "400":
           description: error
+          headers:
+            Authorization:
+              description: Authorization
+              type: string
           schema:
             type: string
         "500":
@@ -114,6 +105,10 @@ paths:
           description: success
           schema:
             type: string
+        "303":
+          description: error
+          schema:
+            type: string
         "400":
           description: error
           schema:
@@ -123,6 +118,44 @@ paths:
           schema:
             type: string
       summary: SignUp
+      tags:
+      - auth
+  /auth/sign-in:
+    get:
+      consumes:
+      - application/json
+      description: SignIn page
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            type: string
+        "400":
+          description: Bad Request
+          schema:
+            type: string
+      summary: ping auth
+      tags:
+      - auth
+  /auth/sign-up:
+    get:
+      consumes:
+      - application/json
+      description: SignUp page
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            type: string
+        "400":
+          description: Bad Request
+          schema:
+            type: string
+      summary: ping auth
       tags:
       - auth
   /example/helloworld:
@@ -140,6 +173,80 @@ paths:
       summary: ping example
       tags:
       - example
+  /page/admin:
+    get:
+      consumes:
+      - application/json
+      description: Admin page
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          headers:
+            Authorization:
+              description: Authorization
+              type: string
+          schema:
+            type: string
+        "400":
+          description: Bad Request
+          headers:
+            Authorization:
+              description: Authorization
+              type: string
+          schema:
+            type: string
+        "403":
+          description: Forbidden
+          headers:
+            Authorization:
+              description: Authorization
+              type: string
+          schema:
+            type: string
+        "500":
+          description: Internal Server Error
+          headers:
+            Authorization:
+              description: Authorization
+              type: string
+          schema:
+            type: string
+      security:
+      - ApiKeyAuth: []
+      summary: ping page
+      tags:
+      - page
+  /page/homepage:
+    get:
+      consumes:
+      - application/json
+      description: home page
+      produces:
+      - application/json
+      responses:
+        "202":
+          description: Accepted
+          schema:
+            type: string
+        "400":
+          description: Bad Request
+          headers:
+            Authorization:
+              description: Authorization
+              type: string
+          schema:
+            type: string
+        "401":
+          description: Unauthorized
+          schema:
+            type: string
+      security:
+      - ApiKeyAuth: []
+      summary: ping page
+      tags:
+      - page
 securityDefinitions:
   ApiKeyAuth:
     in: header
